style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}

.header {
    min-height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/banner.png);
    background-position: center;
    background-size: cover;
    position: relative;
}   

nav {
    display: flex;
    padding: 2% 6%;
    justify-content: space-between;
}

nav img {
    width: 150px;
}

.nav-links {
    flex: 1;
    text-align: right;
}

.nav-links ul li {
    list-style: none;
    display: inline-block;
    padding: 8px 12px;
    position: relative;

}
.nav-links ul li a {
    color: white;
    text-decoration: none;
    font-size: 13px;
}
.nav-links ul li::after {
    content: '';
    height: 2px;
    width: 0%;
    background: #f44336;
    display: block;
    margin: auto;
    transition: 0.5s;
}
.nav-links ul li:hover::after {
    width: 100%;
    
}
.text-box {
    color: white;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    width: 90%;
}
.text-box h1 {
    font-size: 62px;
}
.red-title {
    color: #f44336;
}
.text-box p {
    margin: 10px 0px 40px;
    font-size: 14px;
    color: white;
}
.hero-btn {
    display: inline-block;
    text-decoration: none;
    position: relative;
    border: 1px solid white;
    padding: 10px 30px;
    color: white;
    cursor: pointer;
    background-color: transparent;
}
.hero-btn:hover {
    border: 1px solid #f44336;
    background-color: #f44336;
    transition: 1s
}
nav .fa {
    display: none;
}
.courses {
    text-align: center;
    margin: auto;
    width: 80%;
    padding-top: 100px;
}
h1 {
    font-size: 36px;
    font-weight: 600;
}
p {
    color: #777;
    font-size: 14px;
    font-weight: 300;
    line-height: 22px;
    padding: 10px;
}
.row {
    margin-top: 5%;
    display: flex;
    justify-content: space-between;
}
.course-col {
    flex-basis: 31%;
    background: #fff3f3;
    border-radius: 10px;
    margin-bottom: 5%;
    padding: 20px 12px;
    box-sizing: border-box;
    transition: 0.5s;
}
.course-col:hover {
    box-shadow: 0 0 20px 0 rgba(0,0,0,0.2);
}
h3 {
    text-align: center;
    font-weight: 600;
    margin: 10px;
}
.campus {
    width: 80%;
    margin: auto;
    text-align: center;
    padding-top: 50px;
}
.campus-col {
    flex-basis: 32%;
    border-radius: 10px;
    margin-bottom: 30px;
    position: relative;
    overflow: hidden;
}
.campus-col img {
    width: 100%;
    display: block;
}
.layer {
    background: transparent;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    transition: 0.5s;
}
.layer:hover {
    background: rgba(226,0,0,0.7);
}
.layer h3 {
    width: 100%;
    text-align: center;
    font-weight: 500;
    color: transparent;
    font-size: 26px;
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    transition: 0.5s;
}
.layer:hover h3 {
    color: white;
    bottom: 49%;
}

.facilities {
    width: 80%;
    margin: auto;
    text-align: center;
    padding-top: 50px;
}
.facilities-col {
    flex-basis: 32%;
    border-radius: 10px;
    overflow: hidden;
    margin-bottom: 5%;
    text-align: left;
    
}
.facilities-col img {
    width: 100%;
    border-radius: 10px;
}
.facilities-col p {
    padding: 0;
}
.facilities-col h3 {
    margin-top: 16px;
    margin-bottom: 15px;
    text-align: left;
}

.testimonials {
    width: 80%;
    margin: auto;
    text-align: center;
    padding-top: 50px;
}
.testimonials-col {
    flex-basis: 43%;
    overflow: hidden;
    margin-bottom: 5%;
    text-align: left;
    background: #fff3f3;
    padding: 25px;
    cursor: pointer;
    display: flex;
    border-radius: 10px;
}
.testimonials-col img {
    height: 40px;
    border-radius: 50%;
    margin-right: 20px;
}
.testimonials-col p {
    padding: 0;
}
.testimonials-col h3 {
    margin-top: 15px;
    margin-left: 0;
    text-align: left;
}
.testimonials-col i {
    color: #f44336;
}
.cta {
    margin: 100px auto;
    width: 80%;
    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(images/banner2.jpg);
    background-position: center;
    background-size: cover;
    border-radius: 10px;
    text-align: center;
    padding: 100px 0;
}
.cta h1 {
    color: white;
    margin-bottom: 40px;
}
.footer {
    width: 100%;
    text-align: center;
    padding: 30px 0;
}
.footer h4 {
    margin-bottom: 25px;
    margin-top: 20px;
    font-weight: 600;
}
.icons i {
    color: #f44336;
    margin: 0 13px;
    cursor: pointer;
    padding: 18px 0;
    font-size: 20px;
}
.footer .fa-heart {
    color: red;
}
@media(max-width:700px) {
    .text-box h1 {
        font-size: 20px;
    }
    .nav-links ul li {
        display: block;
    }
    .nav-links {
        position: absolute;
        background: #f44336;
        right: -200px;
        top: 0;
        height: 100vh;
        width: 200px;
        text-align: left;
        z-index: 2;
        transition: 1s;
    }
    nav .fa {
        display: block;
        margin: 10px 0px;
        font-size: 25px;
        color: white;
        cursor: pointer;
    }
    nav .fa-times {
        margin-left: 10px;
    }
    .nav-links ul {
        padding: 20px;
    }
    .row {
        flex-direction: column;
    }
    .cta h1 {
        font-size: 24px;
    }
}

